--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
     <div class="container-fluid">
         <div class="container">
             <div class="header">
                 <div class="logo">
-                    <img src="../image/logo.png" alt="">
+                    <img src="image/logo.png" alt="">
                 </div>
                 <div class="navbar">
                     <ul>
@@ -33,15 +33,15 @@
                     <div  class="button-play">
                         <p>Click here</p>
                         <div class="button">
-                            <img src="../image/play.png" alt="" id="icon">
+                            <img src="image/play.png" alt="" id="icon">
                         </div>
                     </div>
                     <div class="button-dir">
                         <div class="btn btn-prev">
-                            <img src="../image/prev.png" alt="">
+                            <img src="image/prev.png" alt="">
                         </div>
                         <div class="btn btn-next">
-                            <img src="../image/prev.png" alt="">
+                            <img src="image/prev.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -51,6 +51,6 @@
             </audio>
         </div>
     </div>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
