--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="image/logo.png" alt="">
+                <img src="./image/logo.png" alt="">
             </div>
             <div class="navbar">
                 <ul>
@@ -36,13 +36,13 @@
             <div class="controls">
                 <div class="button-play">
                     <div class="btn btn-prev">
-                        <img src="image/prev.png" alt="">
+                        <img src="./image/prev.png" alt="">
                     </div>
                     <div class="button">
-                        <img src="image/play.png" alt="" id="icon">
+                        <img src="./image/play.png" alt="" id="icon">
                     </div>
                     <div class="btn btn-next">
-                        <img src="image/prev.png" alt="">
+                        <img src="./image/prev.png" alt="">
                     </div>
                 </div>
             </div>
